   * The "Cores" button on the title screen is now hidden if no cores other
     than the default are installed
   * Redesigned game dropdown/context menu appearance
   * New categories bar in hotkey preferences allows you to filter hotkeys
   * Fix issue with the title screen not redrawing when the window size or
     fullscreen setting changes with a dialog open over it.
 * WML Engine:
   * Added ignore_special_locations=yes|no, default no, to [terrain_mask] to
     ignore the special locations given in the mask, leaving all those on the
     underlying map unchanged.
   * [terrain_mask] starting locations and special locations are relative to
     the mask. Existing names replace any in the underlying map regardless of
     their location. Each name as a unique location; but a location may have
     any number of names. While a map/mask can give only one name per location;
     stacking masks allows multiple names. Names cannot be removed.
   * Added {HAS_NO_TURN_LIMIT} macro for objectives
   * New attributes for [message] with [option]
     * Added variable= to [message]: if specified, gives variable name to
       receive the [option] index (1..n) selected
       only used if any [option] appear
     * Added value= to [option]: if specified, gives value to store in variable
       instead of index number, only used if variable= appears in [message]
   * New attributes for [role]:
     * search_recall_list=yes|no|only(default yes) controls where to look
     * reassign=yes|no(default yes) if no, check for a unit and do not assign to
       another
     * [auto_recall] sub-tag, if assigned to recall list, gives [recall]
       attributes (no SUF)
     * [else] sub-tag, WML to execute if no unit found for the role
   * New help_text= key for [trait] to set the description displayed in the
     help.
   * Added tag id= [fire_event], which allows raising events by id
   * [modify_unit] now understands [effect] tags, which it applies directly.