@@ -44,6 +44,8 @@ Version 1.13.5+dev:
    * New categories bar in hotkey preferences allows you to filter hotkeys
    * Fix issue with the title screen not redrawing when the window size or
      fullscreen setting changes with a dialog open over it.
+   * Restored descriptions for choices in combobox-based Advanced Preferences
+     entries (lost in 1.13.3).
  * WML Engine:
    * Added ignore_special_locations=yes|no, default no, to [terrain_mask] to
      ignore the special locations given in the mask, leaving all those on the
